...

            <KeyboardAvoidingView style={{ flex: 1 }} behavior={Platform.OS === 'ios' ? 'padding' : 'height'}>
            <ScrollView contentContainerStyle={{ paddingBottom: Math.max(insets.bottom, 16) + 24 }} keyboardShouldPersistTaps="handled"
                    automaticallyAdjustKeyboardInsets={true} showsVerticalScrollIndicator={false}>
                {/* Balance Card */}
                <View style={styles.balanceCard}>
                    <Text style={styles.balanceLabel}>AVAILABLE BALANCE</Text>
                    <Text style={styles.balanceAmount}>
                        {driverBalance ? formatCurrency(driverBalance.payable_balance) : '$0.00'}
                    </Text>

                    <View style={styles.balanceDetails}>
                        <View style={styles.balanceItem}>
...
